--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul,
+h4 {
+  margin: 0;
+  padding: 0;
+}
+img {
+  border-radius: 200px;
+  height: auto;
+  width: 50px;
+}
+ul li {
+  border-radius: 4px;
+  border: 1px solid #eee;
+  list-style: none;
+  margin-bottom: 16px;
+  min-width: 320px;
+  padding: 8px 32px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  margin: auto;
+}
+form input {
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  padding: 4px 6px;
+}
